; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_windows_heap.c_free_extra_info.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_windows_heap.c_free_extra_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @free_extra_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_extra_info(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @r_return_if_fail(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @GetFirstHeapBlock(i32 %6, %struct.TYPE_4__* %3)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %14, %9
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @R_FREE(i32 %12)
  br label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %2, align 4
  %16 = call i64 @GetNextHeapBlock(i32 %15, %struct.TYPE_4__* %3)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %10, label %18

18:                                               ; preds = %14
  br label %19

19:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @r_return_if_fail(i32) #1

declare dso_local i64 @GetFirstHeapBlock(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @R_FREE(i32) #1

declare dso_local i64 @GetNextHeapBlock(i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
